# kd-tree-comparison

./: Cargo.toml  Readme.md  all-benchmarks.json  all-benchmarks.ndjson  kiddo-5-immutable-mveb.ndjson  kiddo-5-immutable-std.ndjson
benches/: add_points.rs  add_points_fnntw.rs  add_points_kiddo_v1.rs  add_points_kiddo_v2.rs  add_points_kiddo_v3_immutable.rs  add_points_kiddo_v3_std.rs  add_points_kiddo_v5_immutable.rs  add_points_kiddo_v5_immutable_dynamic.rs  add_points_nabo.rs  add_points_pykdtree.rs  add_points_scipy.rs  add_points_sklearn.rs  best_n.rs  best_n_kiddo_v1.rs  best_n_kiddo_v2.rs  best_n_kiddo_v3_immutable.rs  best_n_kiddo_v3_std.rs  best_n_kiddo_v5_immutable.rs  best_n_kiddo_v5_immutable_dynamic.rs  deserialize_kiddo_v2.rs  nabo_points.rs  nearest_n.rs  nearest_n_fnntw.rs  nearest_n_kiddo_v1.rs  nearest_n_kiddo_v2.rs  nearest_n_kiddo_v3_immutable.rs  nearest_n_kiddo_v3_std.rs  nearest_n_kiddo_v5_immutable.rs  nearest_n_kiddo_v5_immutable_dynamic.rs  nearest_n_nabo.rs  nearest_n_pykdtree.rs  nearest_n_scipy.rs  nearest_n_sklearn.rs  nearest_n_within_kiddo_v3_immutable.rs  nearest_n_within_kiddo_v3_std.rs  nearest_n_within_kiddo_v5_immutable.rs  nearest_n_within_kiddo_v5_immutable_dynamic.rs  nearest_n_within_nabo.rs  nearest_n_within_unsorted_kiddo_v3_immutable.rs  nearest_n_within_unsorted_kiddo_v3_std.rs  (+36 more)
