[package]
name = "kd-tree-comparison"
version = "0.1.0"
edition = "2021"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1.2.1"
criterion = "0.4.0"
criterion-polyglot = "0.1.0"
fixed = "1.22.0"
fnntw = "0.2.3"
kiddo_v1 = { version = "0.2.4", package = "kiddo" }
kiddo_v2 = { path = "../sok", package = "sok" }
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.6.1"

[[bench]]
name = "add_points"
harness = false

[[bench]]
name = "add_points_fnntw"
harness = false

[[bench]]
name = "add_points_kiddo_v1"
harness = false

[[bench]]
name = "add_points_pykdtree"
harness = false

[[bench]]
name = "nearest_one"
harness = false

[[bench]]
name = "nearest_one_fnntw"
harness = false

[[bench]]
name = "nearest_one_kiddo_v1"
harness = false

[[bench]]
name = "nearest_n"
harness = false

[[bench]]
name = "nearest_n_fnntw"
harness = false

[[bench]]
name = "nearest_n_kiddo_v1"
harness = false

[[bench]]
name = "within_unsorted"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v1"
harness = false

[[bench]]
name = "within"
harness = false

[[bench]]
name = "within_kiddo_v1"
harness = false
