[package]
name = "kd-tree-comparison"
version = "0.1.0"
edition = "2021"
autobenches = false

[dependencies]
az = "1.2.1"
criterion = "0.4"
criterion-polyglot = "0.1"
fixed = "1.22"
fnntw = "0.2"
kiddo_v1 = { version = "0.2", package = "kiddo" }
kiddo_v2 = { version = "2.0.0-beta.9", package = "kiddo" }
nabo = "0.2"
num-traits = "0.2.15"
ordered-float = "3.4.0"
rand = "0.8.5"
rayon = "1.6.1"

[[bench]]
name = "add_points_fnntw"
harness = false

[[bench]]
name = "add_points_kiddo_v1"
harness = false

[[bench]]
name = "add_points_kiddo_v2"
harness = false

[[bench]]
name = "add_points_nabo"
harness = false

[[bench]]
name = "add_points_pykdtree"
harness = false

[[bench]]
name = "add_points_scipy"
harness = false

[[bench]]
name = "add_points_sklearn"
harness = false

[[bench]]
name = "best_n_kiddo_v2"
harness = false

[[bench]]
name = "best_n_kiddo_v1"
harness = false

[[bench]]
name = "nearest_one_kiddo_v2"
harness = false

[[bench]]
name = "nearest_one_fnntw"
harness = false

[[bench]]
name = "nearest_one_kiddo_v1"
harness = false

[[bench]]
name = "nearest_one_nabo"
harness = false

[[bench]]
name = "nearest_one_pykdtree"
harness = false

[[bench]]
name = "nearest_one_sklearn"
harness = false

[[bench]]
name = "nearest_one_scipy"
harness = false

[[bench]]
name = "nearest_n_kiddo_v2"
harness = false

[[bench]]
name = "nearest_n_fnntw"
harness = false

[[bench]]
name = "nearest_n_kiddo_v1"
harness = false

[[bench]]
name = "nearest_n_nabo"
harness = false

[[bench]]
name = "nearest_n_pykdtree"
harness = false

[[bench]]
name = "nearest_n_sklearn"
harness = false

[[bench]]
name = "nearest_n_scipy"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v2"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v1"
harness = false

[[bench]]
name = "within_unsorted_nabo"
harness = false

[[bench]]
name = "within_unsorted_scipy"
harness = false

[[bench]]
name = "within_unsorted_sklearn"
harness = false

[[bench]]
name = "within_kiddo_v2"
harness = false

[[bench]]
name = "within_kiddo_v1"
harness = false

[[bench]]
name = "within_nabo"
harness = false

[[bench]]
name = "within_scipy"
harness = false


[[bench]]
name = "within_sklearn"
harness = false
