[package]
name = "kd-tree-comparison"
version = "0.1.0"
edition = "2021"
autobenches = false

[dependencies]
ahash = "0.7.8"
az = "1.2.1"
criterion = "0.4"
criterion-polyglot = "0.1"
fixed = "1.22"
fnntw = "0.2"
kiddo_v1 = { version = "0.2", package = "kiddo" }
kiddo_v2 = { version = "2.1.1", package = "kiddo" }
kiddo_v3 = { version = "3", package = "kiddo", features = ["immutable"] }
kiddo_next = { path = "../kiddo", package = "kiddo", features = ["simd", "modified_van_emde_boas"] }
memmap = "0.7.0"
nabo = "0.2"
num-traits = "0.2.15"
ordered-float = "3.4.0"
rand = "0.8.5"
rayon = "1.6.1"
rkyv = { version = "0.7", default-features = false, features = ["alloc", "copy_unsafe", "size_64"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
indicatif = "0.17.7"

[lib]
name = "kd_tree_comparison"

[[bench]]
name = "add_points_fnntw"
harness = false

[[bench]]
name = "add_points_kiddo_v1"
harness = false

[[bench]]
name = "add_points_kiddo_v2"
harness = false

[[bench]]
name = "add_points_kiddo_v3_std"
harness = false

[[bench]]
name = "add_points_kiddo_v3_immutable"
harness = false

[[bench]]
name = "add_points_kiddo_v5_immutable"
harness = false

[[bench]]
name = "add_points_nabo"
harness = false

[[bench]]
name = "add_points_pykdtree"
harness = false

[[bench]]
name = "add_points_scipy"
harness = false

[[bench]]
name = "add_points_sklearn"
harness = false

[[bench]]
name = "best_n_kiddo_v2"
harness = false

[[bench]]
name = "best_n_kiddo_v3_std"
harness = false

[[bench]]
name = "best_n_kiddo_v3_immutable"
harness = false

[[bench]]
name = "best_n_kiddo_v5_immutable"
harness = false

#[[bench]]
#name = "deserialize_kiddo_v2"
#harness = false

[[bench]]
name = "nearest_one_kiddo_v2"
harness = false

[[bench]]
name = "nearest_one_kiddo_v3_std"
harness = false

[[bench]]
name = "nearest_one_kiddo_v3_immutable"
harness = false

[[bench]]
name = "nearest_one_kiddo_v5_immutable"
harness = false

[[bench]]
name = "nearest_one_fnntw"
harness = false

[[bench]]
name = "nearest_one_kiddo_v1"
harness = false

[[bench]]
name = "nearest_one_nabo"
harness = false

[[bench]]
name = "nearest_one_pykdtree"
harness = false

[[bench]]
name = "nearest_one_sklearn"
harness = false

[[bench]]
name = "nearest_one_scipy"
harness = false

[[bench]]
name = "nearest_n_kiddo_v2"
harness = false

[[bench]]
name = "nearest_n_kiddo_v3_std"
harness = false

[[bench]]
name = "nearest_n_kiddo_v3_immutable"
harness = false

[[bench]]
name = "nearest_n_kiddo_v5_immutable"
harness = false

[[bench]]
name = "nearest_n_fnntw"
harness = false

[[bench]]
name = "nearest_n_kiddo_v1"
harness = false

[[bench]]
name = "nearest_n_nabo"
harness = false

[[bench]]
name = "nearest_n_pykdtree"
harness = false

[[bench]]
name = "nearest_n_sklearn"
harness = false

[[bench]]
name = "nearest_n_scipy"
harness = false

# [[bench]]
# name = "serialize_kiddo_v2"
# harness = false

[[bench]]
name = "within_unsorted_kiddo_v2"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v3_std"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v3_immutable"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v5_immutable"
harness = false

[[bench]]
name = "within_unsorted_kiddo_v1"
harness = false

[[bench]]
name = "nearest_n_within_unsorted_nabo"
harness = false

[[bench]]
name = "nearest_n_within_unsorted_kiddo_v3_std"
harness = false

[[bench]]
name = "nearest_n_within_unsorted_kiddo_v3_immutable"
harness = false

[[bench]]
name = "nearest_n_within_unsorted_kiddo_v5_immutable"
harness = false

[[bench]]
name = "within_unsorted_scipy"
harness = false

[[bench]]
name = "within_unsorted_sklearn"
harness = false

[[bench]]
name = "within_kiddo_v2"
harness = false

[[bench]]
name = "within_kiddo_v3_std"
harness = false

[[bench]]
name = "nearest_n_within_kiddo_v3_std"
harness = false

[[bench]]
name = "nearest_n_within_kiddo_v3_immutable"
harness = false

[[bench]]
name = "nearest_n_within_kiddo_v5_immutable"
harness = false

[[bench]]
name = "within_kiddo_v3_immutable"
harness = false

[[bench]]
name = "within_kiddo_v5_immutable"
harness = false

[[bench]]
name = "within_kiddo_v1"
harness = false

[[bench]]
name = "nearest_n_within_nabo"
harness = false

[[bench]]
name = "within_scipy"
harness = false

[[bench]]
name = "within_sklearn"
harness = false

# [[bin]]
# name = "compare-output-nearest-one"
# path = "src/compare_output_nearest_one/main.rs"

# [[bin]]
# name = "compare-output-nearest-n"
# path = "src/compare_output_nearest_n/main.rs"

# [[bin]]
# name = "compare-output-nearest-n-within"
# path = "src/compare_output_nearest_n_within/main.rs"
